We'll have options ready for testing shortly. See #22.

--- a/python/sfm.conf
+++ b/python/sfm.conf
@@ -1,6 +1,6 @@
-[dataflow]
+[google_cloud]
 project = spotify-feed-merge
 staging = gs://sfm-staging
 temp = gs://sfm-staging/tmp
 
-[input]
+[standard]
