Additional configuration. See #25.

--- a/python/sfm.conf
+++ b/python/sfm.conf
@@ -5,3 +5,6 @@ temp = gs://sfm-staging/tmp
 
 [standard]
 runner = DataflowRunner
+streams = gs://sfm-bucket/steams.gz
+tracks = gs://sfm-bucket/tracks.gz
+users = gs://sfm-bucket/users.gz
