--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,13 +5,17 @@ appdirs==1.4.3
 asn1crypto==0.22.0
 avro==1.8.1
 Babel==2.4.0
+boto==2.46.1
 cffi==1.10.0
+configobj==5.0.6
 crcmod==1.7
 cryptography==1.8.1
 dill==0.2.6
 docutils==0.13.1
 enum34==1.1.6
 funcsigs==1.0.2
+google-apitools==0.5.8
+google-compute-engine==2.3.5
 httplib2==0.9.2
 idna==2.5
 imagesize==0.7.1
