Installing gcloud. See #25.

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,3 +1,6 @@
 FROM gahancorpcfo/spotify-feed-merge-python 
 
+RUN apt-get -y install google-cloud-sdk
+RUN gcloud auth activate-service-account --key-file /java/sfm.json
+
 CMD ["/python/python/test"]
