--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,11 @@
-FROM gahancorpcfo/spotify-feed-merge-python 
+FROM ubuntu:16.04
 
-RUN apt-get -y install google-cloud-sdk
-RUN gcloud auth activate-service-account --key-file /java/sfm.json
-
-CMD ["/python/python/test"]
+RUN apt-get -y update; apt-get -y upgrade; apt-get -y install ansible; ansible -m get_url -a "url=https://bootstrap.pypa.io/get-pip.py dest=/tmp/get-pip.py" localhost 
+RUN ansible -m lineinfile -a 'line="localhost ansible_connection=local" dest=/etc/ansible/hosts create=yes state=present' localhost
+RUN python /tmp/get-pip.py
+RUN ansible-playbook /src/python/build/python.yml
+RUN ansible-playbook /src/python/build/google.yml
+RUN ansible-playbook /src/python/build/python.yml
+RUN ansible-playbook /src/python/build/google.yml
+WORKDIR /src/python
+RUN ./test
