All that's left is to write the data. See #40.

--- a/python/sfm.conf
+++ b/python/sfm.conf
@@ -4,6 +4,7 @@ staging = gs://sfm-staging/
 temp = gs://sfm-staging/tmp
 
 [standard]
+denormalized = gs://sfm-bucket/denormalized
 runner = DataflowRunner
 streams = gs://sfm-bucket/streams.gz
 tracks = gs://sfm-bucket/tracks.gz
