Fixed incorrect staging path. See #40.

--- a/python/sfm.conf
+++ b/python/sfm.conf
@@ -1,6 +1,6 @@
 [google_cloud]
 project = spotify-feed-merge
-staging = gs://sfm-staging/
+staging = gs://sfm-staging
 temp = gs://sfm-staging/tmp
 
 [standard]
