Maybe it'll still pass. See #40.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
     - .:/java
   python:
-    build: python 
+    build: spotify-feed-merge 
     volumes:
      - .:/src
 ...
