We'll get it one day. See #40.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     volumes:
     - .:/java
   python:
-    build: sfm 
+    build: . 
     volumes:
-     - .:/src
+     - ./sfm:/sfm
 ...
 # vim: ft=ansible:
