Passing unit tests. See #40.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     volumes:
     - .:/java
   python:
-    build: . 
-    volumes:
-     - .:/sfm
+    build: python 
 ...
 # vim: ft=ansible:
