Perhaps they're in the wrong directory. See #42.

--- a/python/spotify-feed-merge/Dockerfile
+++ b/python/spotify-feed-merge/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /srv/sfm
 RUN python setup.py build
 RUN python setup.py install 
 
-CMD ["/usr/bin/python", "/srv/sfm/setup.py", "test"]
+CMD ["/usr/bin/python", "/srv/sfm", "test"]
