--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,10 +1,11 @@
 FROM gahancorpcfo/spotify-feed-merge-python 
 
+RUN pip install nose
+
 ADD . /srv/sfm
 
 WORKDIR /srv/sfm
 
-RUN python setup.py build
-RUN python setup.py install 
+RUN nosetests
 
-CMD ["/usr/bin/python", "/srv/sfm", "test"]
+CMD ["/usr/bin/python", "/srv/sfm/sfm.py"]
