--- a/python/sfm.conf
+++ b/python/sfm.conf
@@ -5,7 +5,8 @@ temp = gs://sfm-staging/tmp
 
 [standard]
 denormalized = gs://sfm-bucket/denormalized
-runner = DataflowRunner
+# runner = DataflowRunner
+runner = DirectRunner
 streams = gs://sfm-bucket/streams.gz
 tracks = gs://sfm-bucket/tracks.gz
 users = gs://sfm-bucket/users.gz
